--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@ai-sdk/groq": "^1.1.7",
+    "@bigmi/react": "^0.1.1",
+    "@lifi/widget": "^3.16.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@tanstack/react-query": "^5.66.0",
     "ai": "^4.1.25",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -22,7 +26,8 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
     "tailwind-variants": "^0.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "wagmi": "^2.14.10"
   },
   "devDependencies": {
     "typescript": "^5",
